# reasonml-pwa-tutorial

./: .gitignore  .tool-versions  README.md  bsconfig.json  package-lock.json  package.json  webpack.config.js
client/: Makefile  README.md  bsconfig.json  package-lock.json  package.json  webpack.config.js
client/src/: App.re  HttpClient.re  MostEx.re  Router.re  Util.re
client/src/component/: Card.re  Link.re  Mermaid.re  MyButton.re  MyFormGroup.re  MyInputText.re  MyLabel.re  MyList.re  MyListItem.re  MyTextarea.re
client/src/mapping/: PageModelMap.re  Router.re
client/src/model/: AppModel.re  ItemModel.re  ItemPageModel.re  PageModel.re  PageModelMap.re  TopPageModel.re
client/src/page/: ErrorPage.re  ItemPage.re  TopPage.re
doc/: client_architecture.dot  index.js  package-lock.json  package.json
public/: index.html
server/: Cargo.toml  Rocket.toml  up.sql
server/src/: db.rs  main.rs
server/src/v1/: item.rs
src/: App.bs.js  App.re  Index.bs.js  MostEx.re  Util.re  index.html  manifest.json
src/component/: Link.re  MyButton.re  MyFormGroup.re  MyInputText.re  MyLabel.re  MyList.re  MyListItem.re  MyTextarea.re
src/component/wrapper/: Markdown.re
src/container/: ItemPage.re  TopPage.re
src/model/: AdaptedModel.re  AdaptedModelMap.re  Adaptor.re  AppModel.re  ItemPageModel.re  ModelAdaptor.re  ModelWrapper.re  TopPageModel.re
src/observer/: AppObserver.re  ItemPageObserver.re  TopPageObserver.re
src/page/: ItemPage.re  TopPage.re
src/reducer/: TopPageReducer.re
src/style/: MyBoxShadow.re
static/: index.html  service-worker.js
(+1 files in other folders)
