[package]
name = "server"
version = "0.1.0"
authors = ["ebosi38051 <ebosi38051@gmail.com>"]

[dependencies]
rand = "0.5"
rocket = "0.3.11"
rocket_codegen = "0.3.11"
rocket_contrib = "0.3.12"
diesel = { version = "<= 1.2", features = ["sqlite", "r2d2"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
